# OpenSTA

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AUTHORS  BUG_REPORTS.md  BUILD  Brewfile  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  COPYING  ChangeLog  Dockerfile  Dockerfile.centos7  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu_18.04  IMPL_PLAN.md  INSTALL  Jenkinsfile  Makefile.am  NEWS  PLAN.md  README  README.md  TODO.md  TODO2.md  TODO3.md  TODO4.md  TODO6.md  bug_report_missing_write_gate_spice_cmd.md  config.h.cmake  configure.ac  how_to_write_good_tests.md  make_coverage_report.sh  messages.txt  open_sta_test.tcl  opensta.patch
app/: Main.cc  Makefile.am  StaApp.i  StaMain.cc  StaMain.hh
dcalc/: ArcDcalcWaveforms.cc  ArcDcalcWaveforms.hh  ArcDelayCalc.cc  ArcDelayCalc.hh  Arnoldi.hh  Arnoldi.txt  ArnoldiDelayCalc.cc  ArnoldiDelayCalc.hh  ArnoldiReduce.cc  ArnoldiReduce.hh  CcsCeffDelayCalc.cc  CcsCeffDelayCalc.hh  CcsSimDelayCalc.cc  CcsSimDelayCalc.hh  DcalcAnalysisPt.cc  DcalcAnalysisPt.hh  Delay.cc  DelayCalc.cc  DelayCalc.hh  DelayCalc.i  DelayCalc.tcl  DelayCalcBase.cc  DelayCalcBase.hh  DelayNormal.cc  DelayScalar.cc  DelaySkewNormal.cc  DmpCeff.cc  DmpCeff.hh  DmpDelayCalc.cc  DmpDelayCalc.hh  FindRoot.cc  FindRoot.hh  GraphDelayCalc.cc  GraphDelayCalc.hh  GraphDelayCalc1.cc  GraphDelayCalc1.hh  LumpedCapDelayCalc.cc  LumpedCapDelayCalc.hh  Makefile.am  NetCaps.cc  (+13 more)
dcalc/test/: CMakeLists.txt  dcalc_advanced.ok  dcalc_advanced.tcl  dcalc_annotate_slew.ok  dcalc_annotate_slew.tcl  dcalc_annotated_incremental.ok  dcalc_annotated_incremental.tcl  dcalc_arnoldi_prima.ok  (+39 more)
doc/: ApiChanges.txt  BugLog  CLA.txt  ChangeLog.txt  CodingGuidelines.txt  Makefile.am  OpenSTA.fodt  OpenSTA.odt  StaApi.txt  TagsAndScenes.md  messages.txt
graph/: Delay.cc  Delay.hh  DelayFloat.cc  DelayFloat.hh  DelayFloatClass.cc  DelayFloatClass.hh  DelayNormal1.cc  DelayNormal1.hh  DelayNormal2.cc  DelayNormal2.hh  Graph.cc  Graph.hh  Graph.i  Graph.tcl  GraphClass.hh  GraphCmp.cc  GraphCmp.hh  Makefile.am  VertexId.hh
liberty/: EquivCells.cc  EquivCells.hh  FuncExpr.cc  FuncExpr.hh  InternalPower.cc  InternalPower.hh  LeakagePower.cc  LeakagePower.hh  LibExprLex.ll  LibExprParse.yy  LibExprReader.cc  LibExprReader.hh  LibExprReaderPvt.hh  LibExprScanner.hh  Liberty.cc  Liberty.hh  Liberty.i  Liberty.tcl  LibertyBuilder.cc  LibertyBuilder.hh  LibertyClass.hh  LibertyExpr.cc  LibertyExpr.hh  LibertyExprLex.ll  LibertyExprParse.yy  LibertyExprPvt.hh  LibertyExt.cc  LibertyLex.ll  LibertyParse.yy  LibertyParser.cc  LibertyParser.hh  LibertyReader.cc  LibertyReader.hh  LibertyReaderPvt.hh  LibertyScanner.hh  LibertyWriter.cc  LinearModel.cc  LinearModel.hh  Makefile.am  Sequential.cc  (+15 more)
network/: ConcreteLibrary.cc  ConcreteLibrary.hh  ConcreteNetwork.cc  ConcreteNetwork.hh  HpinDrvrLoad.cc  HpinDrvrLoad.hh  Link.tcl  MakeConcreteNetwork.hh  Makefile.am  Network.cc  Network.hh  Network.i  Network.tcl  NetworkClass.hh  NetworkCmp.cc  NetworkCmp.hh  NetworkEdit.i  NetworkEdit.tcl  ParseBus.cc  ParseBus.hh  PortDirection.cc  PortDirection.hh  SdcNetwork.cc  SdcNetwork.hh  VerilogNamespace.cc  VerilogNamespace.hh
parasitics/: ConcreteParasitics.cc  ConcreteParasitics.hh  ConcreteParasiticsPvt.hh  EstimateParasitics.cc  EstimateParasitics.hh  MakeConcreteParasitics.hh  Makefile.am  NullParasitics.cc  NullParasitics.hh  Parasitics.cc  Parasitics.hh  Parasitics.i  Parasitics.tcl  ParasiticsClass.hh  ReadParasitics.cc  ReadParasitics.hh  ReduceParasitics.cc  ReduceParasitics.hh  ReportParasiticAnnotation.cc  ReportParasiticAnnotation.hh  SpefLex.ll  SpefNamespace.cc  SpefNamespace.hh  SpefParse.yy  SpefReader.cc  SpefReader.hh  SpefReaderPvt.hh  SpefScanner.hh  SpfLex.ll  SpfParse.yy  SpfReader.cc  SpfReader.hh  SpfReaderPvt.hh  SpfSpefReader.cc  SpfSpefReader.hh
sdc/: Clock.cc  Clock.hh  ClockGatingCheck.cc  ClockGatingCheck.hh  ClockGroups.cc  ClockGroups.hh  ClockInsertion.cc  ClockInsertion.hh  ClockLatency.cc  ClockLatency.hh  CycleAccting.cc  CycleAccting.hh  DataCheck.cc  DataCheck.hh  DeratingFactors.cc  DeratingFactors.hh  DisabledPorts.cc  DisabledPorts.hh  ExceptionPath.cc  ExceptionPath.hh  FilterObjects.cc  InputDrive.cc  InputDrive.hh  Makefile.am  MinMaxValues.hh  PinPair.cc  PinPair.hh  PortDelay.cc  PortDelay.hh  PortExtCap.cc  PortExtCap.hh  RiseFallMinMax.cc  RiseFallMinMax.hh  RiseFallValues.cc  RiseFallValues.hh  Sdc.cc  Sdc.hh  Sdc.i  Sdc.tcl  SdcClass.hh  (+8 more)
sdf/: Makefile.am  ReportAnnotation.cc  ReportAnnotation.hh  Sdf.hh  Sdf.i  Sdf.tcl  SdfLex.ll  SdfParse.yy  SdfReader.cc  SdfReader.hh  SdfReaderPvt.hh  SdfScanner.hh  SdfWriter.cc  SdfWriter.hh
search/: Bdd.cc  Bfs.cc  Bfs.hh  CheckCapacitanceLimits.cc  CheckCapacitanceLimits.hh  CheckCapacitances.cc  CheckCapacitances.hh  CheckFanoutLimits.cc  CheckFanoutLimits.hh  CheckFanouts.cc  CheckFanouts.hh  CheckMaxSkews.cc  CheckMaxSkews.hh  CheckMinPeriods.cc  CheckMinPeriods.hh  CheckMinPulseWidths.cc  CheckMinPulseWidths.hh  CheckSlewLimits.cc  CheckSlewLimits.hh  CheckSlews.cc  CheckSlews.hh  CheckTiming.cc  CheckTiming.hh  ClkDelays.hh  ClkInfo.cc  ClkInfo.hh  ClkLatency.cc  ClkLatency.hh  ClkNetwork.cc  ClkSkew.cc  ClkSkew.hh  Corner.cc  Corner.hh  Crpr.cc  Crpr.hh  FindClkPins.cc  FindRegister.cc  FindRegister.hh  GatedClk.cc  GatedClk.hh  (+78 more)
util/: ArrayTable.hh  Condition.cc  Condition.hh  Debug.cc  Debug.hh  DisallowCopyAssign.hh  DispatchQueue.cc  DispatchQueue.hh  EnumNameMap.hh  Error.cc  Error.hh  FlexDisableRegister.hh  FlexPragma.hh  Fuzzy.cc  Fuzzy.hh  Hash.cc  Hash.hh  HashMap.hh  HashSet.hh  Iterator.hh  Machine.cc  Machine.hh  MachineApple.cc  MachineLinux.cc  MachineUnknown.cc  MachineWin32.cc  Makefile.am  Map.hh  MinMax.cc  MinMax.hh  Mutex.cc  Mutex.hh  ObjectId.hh  ObjectIndex.hh  ObjectTable.hh  PatternMatch.cc  PatternMatch.hh  Pool.hh  Pthread.cc  Pthread.hh  (+39 more)
verilog/: Makefile.am  Verilog.hh  Verilog.i  Verilog.tcl  VerilogLex.ll  VerilogParse.yy  VerilogReader.cc  VerilogReader.hh  VerilogReaderPvt.hh  VerilogScanner.hh  VerilogWriter.cc  VerilogWriter.hh
(+1243 files in other folders)
